calculations correct. not showing in browser

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-/* #loading {
+#loading {
     display:none;
 }
 #results{
     display:none;
-} */
+}
